added functs to add, mark as completed and delete tasks

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
         <form>
             <!-- <label>Add new Task</label> -->
-        <input type="text" placeholder="wake up" class="input">
+            <input type="text" placeholder="wake up">
             <button>Add</button>
         </form>
     
-        <ul class="listContainer" >
+        <ul class="listContainer"    >
             <!-- <li>
                 <input type="checkbox">
                 <p>commute to work</p>
@@ -58,6 +58,7 @@
                 <p>commute to work</p>
                 <button>X</button>
             </li> -->
+
         </ul>
 
     </main>
