added update feature

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <form>
             <!-- <label>Add new Task</label> -->
             <input type="text" placeholder="wake up">
-            <button>Add</button>
+            <button class="addItem" >Add</button>
         </form>
     
         <ul class="listContainer"    >
@@ -42,6 +42,9 @@
                 <input type="checkbox">
                 <p>commute to work</p>
                 <button>X</button>
+                <button>
+                    <img src="/images/refresh.png" alt="update">
+                </button>
             </li>
             <li>
                 <input type="checkbox">
