--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Event Delegation | Todo List</title>
     <link rel="stylesheet" href="index.css">
-    <script src="/index.js" defer></script>
+    <script src="/index.js" type="module" defer></script>
 </head>
 <body>
 
@@ -44,7 +44,7 @@
                 <button class="clearBtn" >Clear</button>
             </div>
 
-            <form>
+            <form name="my-form" >
                 <!-- <label>Add new Task</label> -->
                 <input type="text" placeholder="wake up" maxlength="30" >
                 <button class="addItem" >Add</button>
